changed dataset directory

--- a/CHATBOT/PetChat.ipynb
+++ b/CHATBOT/PetChat.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -130,7 +130,7 @@
         "\n",
         "# Load dataset\n",
         "# Assuming the dataset is in the same directory as this script\n",
-        "file_path = \"Dog-Cat-QA.csv\"\n",
+        "file_path = \"datasets/Dog-Cat-QA.csv\"\n",
         "df = pd.read_csv(file_path)\n",
         "\n",
         "# Display basic info and first few rows\n",
@@ -157,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 2,
       "metadata": {
         "id": "xnXfX9yq1Zro"
       },
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -211,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 4,
       "metadata": {
         "id": "OTbp2YBax8al"
       },
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 5,
       "metadata": {
         "id": "tJ7bVuIn11EL"
       },
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -307,13 +307,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 7,
       "metadata": {
         "id": "34RqGy5b15Ym"
       },
       "outputs": [],
       "source": [
-        "df[[\"input_text\", \"target_text\"]].to_csv(\"cleaned_pet_qa.csv\", index=False)"
+        "df[[\"input_text\", \"target_text\"]].to_csv(\"datasets/cleaned_pet_qa.csv\", index=False)"
       ]
     },
     {
@@ -577,7 +577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "sFU7Aazs2NSz"
       },
@@ -769,7 +769,7 @@
         "import pandas as pd\n",
         "\n",
         "# Load cleaned data\n",
-        "df = pd.read_csv(\"cleaned_pet_qa.csv\")\n",
+        "df = pd.read_csv(\"datasets/cleaned_pet_qa.csv\")\n",
         "\n",
         "# Tokenize the dataset\n",
         "max_input_length = 64\n",
@@ -1060,7 +1060,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1136,7 +1136,7 @@
         "import random\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "df = pd.read_csv(\"cleaned_pet_qa.csv\") \n",
+        "df = pd.read_csv(\"datasets/cleaned_pet_qa.csv\") \n",
         "train_df, val_df = train_test_split(df, test_size=0.1, random_state=42)\n",
         "\n",
         "sampled = val_df.sample(10)\n",
