--- a/CHATBOT/PetChat.ipynb
+++ b/CHATBOT/PetChat.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -130,7 +130,7 @@
         "\n",
         "# Load dataset\n",
         "# Assuming the dataset is in the same directory as this script\n",
-        "file_path = \"Dog-Cat-QA.csv\"\n",
+        "file_path = \"datasets/Dog-Cat-QA.csv\"\n",
         "df = pd.read_csv(file_path)\n",
         "\n",
         "# Display basic info and first few rows\n",
@@ -157,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 10,
       "metadata": {
         "id": "xnXfX9yq1Zro"
       },
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -211,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 12,
       "metadata": {
         "id": "OTbp2YBax8al"
       },
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 13,
       "metadata": {
         "id": "tJ7bVuIn11EL"
       },
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -307,13 +307,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 15,
       "metadata": {
         "id": "34RqGy5b15Ym"
       },
       "outputs": [],
       "source": [
-        "df[[\"input_text\", \"target_text\"]].to_csv(\"cleaned_pet_qa.csv\", index=False)"
+        "df[[\"input_text\", \"target_text\"]].to_csv(\"datasets/cleaned_pet_qa.csv\", index=False)"
       ]
     },
     {
@@ -424,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -550,7 +550,11 @@
             "Requirement already satisfied: MarkupSafe>=2.1.1 in c:\\users\\pc\\anaconda3\\lib\\site-packages (from werkzeug>=1.0.1->tensorboard~=2.19.0->tensorflow<2.20,>=2.19->tf-keras) (2.1.3)\n",
             "Requirement already satisfied: markdown-it-py>=2.2.0 in c:\\users\\pc\\anaconda3\\lib\\site-packages (from rich->keras>=3.5.0->tensorflow<2.20,>=2.19->tf-keras) (2.2.0)\n",
             "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in c:\\users\\pc\\anaconda3\\lib\\site-packages (from rich->keras>=3.5.0->tensorflow<2.20,>=2.19->tf-keras) (2.15.1)\n",
-            "Requirement already satisfied: mdurl~=0.1 in c:\\users\\pc\\anaconda3\\lib\\site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.5.0->tensorflow<2.20,>=2.19->tf-keras) (0.1.0)\n"
+            "Requirement already satisfied: mdurl~=0.1 in c:\\users\\pc\\anaconda3\\lib\\site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.5.0->tensorflow<2.20,>=2.19->tf-keras) (0.1.0)\n",
+            "WARNING:tensorflow:From c:\\Users\\PC\\anaconda3\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+            "\n",
+            "WARNING:tensorflow:From c:\\Users\\PC\\anaconda3\\Lib\\site-packages\\tf_keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+            "\n"
           ]
         },
         {
@@ -577,7 +581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "sFU7Aazs2NSz"
       },
@@ -769,7 +773,7 @@
         "import pandas as pd\n",
         "\n",
         "# Load cleaned data\n",
-        "df = pd.read_csv(\"cleaned_pet_qa.csv\")\n",
+        "df = pd.read_csv(\"datasets/cleaned_pet_qa.csv\")\n",
         "\n",
         "# Tokenize the dataset\n",
         "max_input_length = 64\n",
@@ -836,7 +840,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -847,26 +851,20 @@
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "('pettychat_model\\\\tokenizer_config.json',\n",
-              " 'pettychat_model\\\\special_tokens_map.json',\n",
-              " 'pettychat_model\\\\spiece.model',\n",
-              " 'pettychat_model\\\\added_tokens.json',\n",
-              " 'pettychat_model\\\\tokenizer.json')"
-            ]
-          },
-          "execution_count": 35,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From c:\\Users\\PC\\anaconda3\\Lib\\site-packages\\tf_keras\\src\\saving\\legacy\\save.py:537: The name tf.train.NewCheckpointReader is deprecated. Please use tf.compat.v1.train.NewCheckpointReader instead.\n",
+            "\n"
+          ]
         }
       ],
       "source": [
         "# After training and before saving:\n",
         "model.load_weights('best_model')  # Load the best weights\n",
         "\n",
-        "model.save_pretrained(\"pettychat_model\")\n",
-        "tokenizer.save_pretrained(\"pettychat_model\")"
+        "model.save_pretrained(\"petchat_model\")\n",
+        "tokenizer.save_pretrained(\"petchat_model\")"
       ]
     },
     {
@@ -974,17 +972,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 8,
       "metadata": {
         "id": "8RqIIydB9NRa"
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "BLEU Score: 0.06823477452269999\n",
-            "F1 Score: 0.1177194931000809\n"
+          "ename": "NameError",
+          "evalue": "name 'tokenizer' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[8], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m predictions \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m input_text \u001b[38;5;129;01min\u001b[39;00m inputs:\n\u001b[1;32m----> 9\u001b[0m     input_ids \u001b[38;5;241m=\u001b[39m tokenizer\u001b[38;5;241m.\u001b[39mencode(input_text, return_tensors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtf\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     10\u001b[0m     output \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mgenerate(\n\u001b[0;32m     11\u001b[0m         input_ids,\n\u001b[0;32m     12\u001b[0m         max_length\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m128\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     18\u001b[0m         top_p\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.95\u001b[39m\n\u001b[0;32m     19\u001b[0m     )\n\u001b[0;32m     20\u001b[0m     decoded \u001b[38;5;241m=\u001b[39m tokenizer\u001b[38;5;241m.\u001b[39mdecode(output[\u001b[38;5;241m0\u001b[39m], skip_special_tokens\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'tokenizer' is not defined"
           ]
         }
       ],
@@ -998,7 +999,16 @@
         "predictions = []\n",
         "for input_text in inputs:\n",
         "    input_ids = tokenizer.encode(input_text, return_tensors=\"tf\")\n",
-        "    output = model.generate(input_ids, max_length=128, num_beams=4, early_stopping=True)\n",
+        "    output = model.generate(\n",
+        "        input_ids,\n",
+        "        max_length=128,\n",
+        "        num_beams=4,\n",
+        "        early_stopping=True,\n",
+        "        repetition_penalty=2.0,\n",
+        "        no_repeat_ngram_size=3,\n",
+        "        temperature=1.2,\n",
+        "        top_p=0.95\n",
+        "    )\n",
         "    decoded = tokenizer.decode(output[0], skip_special_tokens=True)\n",
         "    predictions.append(decoded)\n",
         "\n",
@@ -1060,7 +1070,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1136,7 +1146,7 @@
         "import random\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "df = pd.read_csv(\"cleaned_pet_qa.csv\") \n",
+        "df = pd.read_csv(\"datasets/cleaned_pet_qa.csv\") \n",
         "train_df, val_df = train_test_split(df, test_size=0.1, random_state=42)\n",
         "\n",
         "sampled = val_df.sample(10)\n",
